# Gestion-election

./: Electionaff.txt  Makefile  Makefile.am  Makefile.in  admin.txt  bv.txt  config.h  config.status  configure  filtrer.txt  list.txt  projetfinal.glade.bak  projetfinal.gladep  user.txt  utilisateurs.txt  vote.txt
autom4te.cache/: output.0  requests  traces.0  traces.1
po/: Makefile  Makefile.in
src/: Election.c  Election.h  Makefile  Makefile.am  Makefile.in  bv.c  bv.h  callbacks.c  callbacks.h  fct.c  fct.h  interface.c  interface.c.bak  interface.h.bak  list.c  list.h  main.c  projetfinal  statrin.c  statrin.h  utilisateur.c  utilisateur.h
src/.deps/: Election.Po  bv.Po  callbacks.Po  fct.Po  list.Po  statrin.Po  utilisateur.Po
